css/main.css
div.topHalfBlackColumn {
    background: linear-gradient(
            to bottom,
            #171717 50%,
            #282828 50%
    );
}

div.TopHalfRedBlackColumn {
    background: linear-gradient(
            to bottom,
            red 50%,
            #171717 50%
    );
}

div.bottomHalfRedBlackColumn {
    background: linear-gradient(
            to bottom,
            #282828 50%,
            red 50%
    );
}

div.grayBackground {
    background-color: #282828;
}

.headerLogo img {
    z-index: 1000000000000000000000000;
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    top: 35%;
}

html, body {
    height: 100% !important;
    font-family: 'Open Sans', Fallback, sans-serif !important;
}

div.fullHeader {
    background-color: #171717;
    height: 105vh;
    width: 100%;
}

.blackBlackground {
    background-color: #171717;
}

div.menuBackground {
    background-color: #1e1e1e;
}

div.centerText {
    text-align: center;
}

div.centerLeftText {
    margin: auto;
    text-align: left !important;
}

.grayText {
    color: gray !important;
}

.whiteText {
    color: white !important;
}

.leistungTextPadding {
    padding-left: 20px;
}

a.scroll_down {
    z-index: 1000000000000000000000000;
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    color: white !important;
    bottom: 5%;
    height: 50px;
    width: 30px;
    background-color: transparent;
    border: 1px solid white;
    border-radius: 20px;
    cursor: pointer;
    outline: none;
}

a.scroll_down:before {
    position: absolute;
    top: 10px;
    left: 50%;
    content: '';
    width: 6px;
    height: 6px;
    margin-left: -3px;
    background-color: #fff;
    border-radius: 100%;
    -webkit-animation: scroll_down_btn-animation 3s infinite;
    animation: scroll_down_btn-animation 3s infinite;
    box-sizing: border-box;
}

#scrollDownBtn p {
    width: 120px;
    position: absolute;
    top: 130%;
    left: -135%;
}

div.imageRow {
    padding-top: 20px;
}

@keyframes scroll_down_btn-animation {
    0% {
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
        opacity: 0;
    }
    40% {
        opacity: 1;
    }
    80% {
        -webkit-transform: translate(0, 20px);
        transform: translate(0, 20px);
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

@-webkit-keyframes scroll_down_btn-animation {
    0% {
        -webkit-transform: translate(0, 0);
        transform: translate(0, 0);
        opacity: 0;
    }
    40% {
        opacity: 1;
    }
    80% {
        -webkit-transform: translate(0, 20px);
        transform: translate(0, 20px);
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

div.hollowBox {
    margin-top: 20px !important;
    width: 250px;
    height: 45px;
    border: 2px solid white;
    margin: auto;
}

a.hollowLink2 {
    border: 2px solid white;
    border-radius: 20px;
    font-size: 16px;
    width: 40px !important;
    color: white;
    text-decoration: none !important;
    position: relative;
    top: 16%;
}

a.hollowLink {
    border: 2px solid white;
    border-radius: 0px;
    color: white;
    text-decoration: none !important;
    font-size: 16px;
    width: 250px;
    height: 45px;
    display: block;
    margin: auto;
    margin-top: 20px !important;
}

a.hollowLink p {
    position: relative;
    top: 15%;
}

a.hollowLink:hover {
    color: gray;
    border: 2px solid gray;
}

div.gradBackground {
    color: #fff;
    background: linear-gradient(to bottom right,
    #516fe7, #FD746C,
    #FF8235, #ffff1c,
    #92FE9D, #00C9FF,
    #a044ff, #e73827);
    background-size: 1000% 1000%;
    -webkit-animation: Gradient 100s ease infinite;
    -moz-animation: Gradient 100s ease infinite;
    animation: Gradient 100s ease infinite;
}

@-webkit-keyframes Gradient {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@-moz-keyframes Gradient {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@keyframes Gradient {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

div.responsive-slick-large {
    width: 200% !important;
    padding-top: 60px;
    padding-bottom: 60px;
    overflow-x: hidden !important;
    overflow-x: -moz-hidde-unscrollable !important;
    position: relative;
    left: -50% !important;
}

/* the slides */
.slick-slide {
    margin: 0 15px;
}

/* the parent */
.slick-list {
    margin: 0 -15px;
}

/* the slides */
.smallSlider.slick-slide {
    margin: 0 0px;
}

/* the parent */
.smallSlider.slick-list {
    margin: 0 0px;
}

.slick-dots li.slick-active button:before {
    color: white !important;
}

.slick-dots li button:hover:before {
    color: white !important;
}

.topPadding {
    padding-top: 60px;
}

.topContentPadding {
    padding-top: 40px
}

.buttomPadding {
    padding-bottom: 60px;
}

ul.menuList {
    margin: auto;
    padding: 0;
    list-style: none;
    display: table;
    text-align: center;
}
li.menuItem {
    display: table-cell;
    position: relative;
    padding: 0;
}
a.menuLink {
    display: inline-block;
    padding: 5px 20px;
    position: relative;
    text-align: center;
    color: white !important;
    text-decoration: none !important;
}
a.menuLink:after {
    background: none repeat scroll 0 0 transparent;
    bottom: 0;
    content: "";
    display: block;
    height: 2px;
    left: 50%;
    position: absolute;
    background: white !important;
    transition: width 0.3s ease 0s, left 0.3s ease 0s;
    width: 0;
}
a.menuLink:hover:after {
    width: 100%;
    left: 0;
}

div.menuRow {
    position: absolute;
    top: 35%;
    margin: auto;
    width: 98%;
}

div.menuRowSmall {
    position: absolute;
    top: 20%;
    margin: auto;
    width: 98%;
}

div.noPaddingOverflowX {
    padding-left: 0px !important;
    padding-right: 0px !important;
    overflow-x: hidden !important;
}

/* open-sans-regular - latin */
@font-face {
    font-family: 'Open Sans';
    font-style: normal;
    font-weight: 400;    
    src: url('font/open-sans-v15-latin-regular.eot'); /* IE9 Compat Modes */
    src: local('Open Sans Regular'), local('OpenSans-Regular'),
    url('font/open-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
    url('font/open-sans-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
    url('font/open-sans-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
    url('font/open-sans-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
    url('font/open-sans-v15-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
}

